fix bug with hero slider height on mobile

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -13,8 +13,8 @@
 }
 
 .hero__slide {
-  padding-top: 144px;
-  padding-bottom: 160px;
+  min-height: 568px;
+  padding-top: 121px;
   background-size: cover;
   background-repeat: no-repeat;
 
@@ -154,14 +154,20 @@
     background-color: transparent;
     border: 1px solid $white;
     opacity: 1;
+    transition: background-color 0.2s;
 
     @include media("tablet") {
       width: 20px;
       height: 20px;
     }
+
+    &:hover {
+      background-color: rgba($white, 0.3);
+    }
   }
 
-  & .swiper-pagination-bullet-active {
+  & .swiper-pagination-bullet-active,
+  & .swiper-pagination-bullet-active:hover {
     background-color: $white;
   }
 
